--- a/style.css
+++ b/style.css
@@ -55,3 +55,12 @@
 .coffee-oper {
   background: lightgrey;
 }
+
+.bills {
+  margin-left: 10%;
+}
+
+.bills img {
+  width: 20%;
+  margin-left: 5px;
+}
